Fix venue mobile spacing error

--- a/css/style.css
+++ b/css/style.css
@@ -1741,4 +1741,12 @@ iframe {
   .sponsors-container-main {
     margin-top: 100px;
   }
+
+  .sponsor-space-issue {
+    margin-bottom: 70px;
+  }
+
+  .sponsor-second-row {
+    margin-top: 0px;
+  }
 }
